--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "pack": "electron-packager ./src Grbr --platform=all --arch=x64 --electronVersion=1.8.2",
-    "pack:mac": "electron-packager ./src Grbr --platform=darwin --arch=x64 --electronVersion=1.8.2",
-    "pack:win": "electron-packager ./src Grbr --platform=win32 --arch=x64 --electronVersion=1.8.2",
-    "pack:linux": "electron-packager ./src Grbr --platform=linux --arch=x64 --electronVersion=1.8.2"
+    "pack": "electron-packager . Grbr --platform=all --arch=x64 --electronVersion=1.8.2 --overwrite",
+    "pack:mac": "electron-packager . Grbr --platform=darwin --arch=x64 --electronVersion=1.8.2 --overwrite",
+    "pack:win": "electron-packager . Grbr --platform=win32 --arch=x64 --electronVersion=1.8.2 --overwrite",
+    "pack:linux": "electron-packager . Grbr --platform=linux --arch=x64 --electronVersion=1.8.2 --overwrite"
   },
   "author": "",
   "license": "ISC",
