--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron .",
     "pack": "electron-packager . Grbr --platform=all --arch=x64 --electronVersion=1.8.2 --overwrite",
     "pack:mac": "electron-packager . Grbr --platform=darwin --arch=x64 --electronVersion=1.8.2 --overwrite",
-    "pack:win": "electron-packager . Grbr --platform=win32 --arch=x64 --electronVersion=1.8.2 --overwrite",
+    "pack:win": "electron-packager . Grbr --platform=win32 --arch=x64 --electronVersion=1.8.2 --overwrite; node windowsInstaller.js; rm -rf ./Grbr-win32-x64",
     "pack:linux": "electron-packager . Grbr --platform=linux --arch=x64 --electronVersion=1.8.2 --overwrite"
   },
   "author": "",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "asar": "^0.14.2",
     "electron": "^1.8.2",
-    "electron-packager": "^11.0.1"
+    "electron-packager": "^11.0.1",
+    "electron-winstaller": "^2.6.4"
   }
 }
